[gd_scene load_steps=2 format=3 uid="uid://dl2pettpfw6hl"]

[ext_resource type="Script" uid="uid://tv4n1ayf4t6e" path="res://scene/component/attack_component.gd" id="1_jm6r8"]

[node name="AttackComponent" type="Area2D"]
script = ExtResource("1_jm6r8")

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
